--- a/Changes
+++ b/Changes
@@ -1,4 +1,28 @@
 Revision history for WWW::Mechanize::Plugin::Ajax
 
-0.01    24 January, 2008
+0.02    19 August, 2008
+        • Relative URIs are now supported.
+        • URIs are now checked to see whether they originate from the
+          same server  (and port and  scheme)  as  the  current  page.
+        • Fake cookies (created by setRequestHeader) are no longer
+          clobbered when there are real cookies.
+        • The event methods addEventListener, removeEventListener and
+          dispatchEvent have been added.
+        • There are now constants for the readyState
+          (XMLHttpRequest.UNSENT etc.).
+        • Non-standard HTTP method names are no longer folded to
+          uppercase.
+        • The ‘open’ method now dies if the method name is not a
+          valid HTTP token or if it is CONNECT,  TRACE or  TRACK
+          (case-tolerant).
+        • The fragment part (#...) of a URI is now stripped.
+        • The ‘open’ method now dies if the URL’s scheme is not
+          supported.
+        • Username and password are now gleaned from the URL if pres-
+          ent and if the corresponding  args  to  open  are  omitted.
+        • The username and password info no  longer  leaks  from  one
+          object to the next. (The send method used to set the creden-
+          tials for all XHR objects that didn’t have any.)
+
+0.01    29 July, 2008
         First release
