Import of SPROUT/WWW-Mechanize-Plugin-Ajax-0.04 from CPAN.
gitpan-cpan-distribution: WWW-Mechanize-Plugin-Ajax
gitpan-cpan-version:      0.04
gitpan-cpan-path:         SPROUT/WWW-Mechanize-Plugin-Ajax-0.04.tar.gz
gitpan-cpan-author:       SPROUT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for WWW::Mechanize::Plugin::Ajax
 
+0.04    15 October, 2008
+        No new features; simply updated to work with LWP 5.815
+
 0.03    9 September, 2008
         • The errors produced when the URL passed to open is from the
           wrong site/port/etc. are now DOMException objects.
