Import of SPROUT/WWW-Mechanize-Plugin-Ajax-0.05 from CPAN.
gitpan-cpan-distribution: WWW-Mechanize-Plugin-Ajax
gitpan-cpan-version:      0.05
gitpan-cpan-path:         SPROUT/WWW-Mechanize-Plugin-Ajax-0.05.tar.gz
gitpan-cpan-author:       SPROUT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for WWW::Mechanize::Plugin::Ajax
 
+0.05    16 October, 2008
+        Fixed to work with  LWP  5.818,  which has a heart attack when
+        an HTTP header’s value is an object that happens indirectly to
+        reference a code reference.
+
 0.04    15 October, 2008
         No new features; simply updated to work with LWP 5.815
 
